----------------------------------

Changes to the Mercury language:
* We have added support for functional dependencies to the typeclass system.
  See the "Type classes" section of the Mercury Language Refence Manual for
  details.
* We have added support for optional module initialisation.  See the 
  "Optional module initialisation" section of the Mercury Language Refence
  Manual for details.

Changes to the Mercury standard library:
* We have added an `injection' module, for reversible maps that are injective.
* We have added list.foldl_corresponding/5 and list.foldl2_corresponding/7.
* We have added string.word_wrap/2.

Changes to the Mercury debugger:
* Users can now keep hold of a term, referring to it even when execution has
  left the goal at which the term was available as the value of a program
  variable.
* Users can now see the set of places where two terms differ from each other.

NEWS since Mercury release 0.11.0:
----------------------------------

HIGHLIGHTS
==========

Changes to the Mercury language:
* Infix `.' is now accepted as a module name separator.
* Field access syntax can now be used at the top-level in func and mode
  declarations and in the head of a clause for a user-defined field access
  function.
* We now support impure higher-order code.
* We now allow user-defined comparison predicates.
* User-defined equality and comparison predicates for a type are now
  required to be defined in the same module as the type.
* Experimental support for user-defined constrained types has been added.
* We now support the use of `..' as an infix operator.

Changes to the Mercury standard library:
* We've added several new modules: cord, for sequences with O(1) consing and
  concatenation, array2d, for two-dimensional arrays, and version_array,
  version_array2d, version_bitmap, version_hash_table, and version_store,
  implementing non-unique versions of these types supporting O(1) access for