@@ -335,6 +335,7 @@ collect_mq_info_2(typeclass(_, _, SymName, Params, _, _), !Info) :-
     ).
 collect_mq_info_2(instance(_, _, _, _, _, _), !Info).
 collect_mq_info_2(initialise(_), !Info).
+collect_mq_info_2(mutable(_, _, _, _, _), !Info).
 
 :- pred collect_mq_info_qualified_symname(sym_name::in,
     mq_info::in, mq_info::out) is det.
@@ -721,6 +722,13 @@ module_qualify_item(
         initialise(PredSymName) - Context,
         initialise(PredSymName) - Context,
         !Info, yes, !IO).
+
+module_qualify_item(
+        mutable(Name, Type0, InitTerm, Inst0, Attrs) - Context,
+        mutable(Name, Type, InitTerm, Inst, Attrs) - Context,
+        !Info, yes, !IO) :-
+    qualify_type(Type0, Type, !Info, !IO),
+    qualify_inst(Inst0, Inst, !Info, !IO).
 
 :- pred update_import_status(module_defn::in, mq_info::in, mq_info::out,
     bool::out) is det.
